adding navigation button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         the obstacle, and he was wise.
       </div>
       <div class="btn"><a class="button" href="#">Discover</a></div>
+      <div class="homework">
+        <a href="https://viktoriia5.github.io/Lesson9a/">Next homework!</a>
+      </div>
     </main>
   </body>
 </html>
